--- a/main.tex
+++ b/main.tex
@@ -2272,7 +2272,7 @@ For this case, the jobs could be grouped based on distance to this particular jo
 
 
 \subsection*{Acknowledgment} %% Remove this section if not needed
-\textit{We thank the reviewers Jean-Thomas Acquaviva, Adrian Jackson, and Suren Byna, for their constructive feedback.}
+\textit{We thank the reviewers Jean-Thomas Acquaviva, Suren Byna, Adrian Jackson, and George Markomanolis for their constructive feedback.}
 
   % The bibliography
 \addcontentsline{toc}{section}{Bibliography}
